Complete first roundtrip

--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
 
     <!-- Load pyscript (WASM python interpreter). -->
     <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
-    <!-- <script defer src="https://pyscript.net/latest/pyscript.js"></script> -->
+    <script defer src="https://pyscript.net/latest/pyscript.js"></script>
 
     <style>
         body, #root {
@@ -20,12 +20,12 @@
 
 <body>
     <!-- Load the python App. -->
-    <!-- <py-config> -->
-    <!--     # sqlite3 is a non-standard dependency that needs to be specified explicitly. -->
-    <!--     # owlready doesn't have a wheel, so we use a third-party fork to install the wheel from. -->
-    <!--     packages = ["sqlite3", "static/Owlready2-0.25-py3-none-any.whl"] -->
-    <!-- </py-config> -->
-    <!-- <py-script src="static/index.py"></py-script> -->
+    <py-config>
+        # sqlite3 is a non-standard dependency that needs to be specified explicitly.
+        # owlready doesn't have a wheel, so we use a third-party fork to install the wheel from.
+        packages = ["sqlite3", "static/Owlready2-0.25-py3-none-any.whl"]
+    </py-config>
+    <py-script src="static/index.py"></py-script>
 
     <!-- Here's the actual website (powered by React). -->
     <div id="root"></div>
