Implement scrollIntoView for klass card list

--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <title>Interactive application window</title>
 
     <!-- Load pyscript (WASM python interpreter). -->
-    <!-- <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" /> -->
+    <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
     <script defer src="https://pyscript.net/latest/pyscript.js"></script>
 
     <style>
@@ -15,7 +15,7 @@
             height: 100%;
             overflow: hidden;
         }
-        #pyconfig {
+        py-terminal {
             display: none;
         }
     </style>
